= Changelog
:link-repository: https://github.com/d4l-data4life/hc-sdk-kmp-integration
:doctype: article
:toc: macro
:toclevels: 1
:toc-title:
:icons: font
:imagesdir: assets/images
ifdef::env-github[]
:warning-caption: :warning:
:caution-caption: :fire:
:important-caption: :exclamation:
:note-caption: :paperclip:
:tip-caption: :bulb:
endif::[]

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

Template could be found here: link:https://github.com/d4l-data4life/hc-readme-template/blob/main/TEMPLATE_CHANGELOG.adoc[CHANGELOG]

[discrete]
==== Versions
toc::[]

== https://github.com/d4l-data4life/hc-sdk-kmp-integration/compare/v1.15.1...main[Unreleased]

=== Added

=== Changed

* Change GitHub action from self-hosted runner to cloud runner

=== Deprecated

=== Removed

=== Fixed



=== Bumped

* Gradle 6.9.1 -> 7.4.2
* HC SDK KMP 1.9.2 -> 1.15.1
* HC FHIR SDK Java 1.2.1 -> 1.6.3
* HC FHIR Helper 1.4.1 -> 1.7.1
* HC Util SDK 1.4.1 -> 1.10.0
* Kotlin 1.4.31 -> 1.4.32
* Kotlin Coroutines 1.4.2 -> 1.4.3
* Android Gradle Plugin 4.1.2 -> 7.1.3
* Android Desugar 1.0.5 -> 1.0.9
* AndroidX Ktx 1.3.1 -> 1.7.0
* AndroidX AppCompat 1.2.0 -> 1.4.1
* AndroidX Browser 1.3.0 -> 1.4.0
* AndroidX ConstraintLayout 2.0.4 -> 2.1.3
* AndroidX Lifecycle 2.2.0 -> 2.4.1
* AndroidX Navigation 2.3.3 -> 2.4.2
* Google Material 1.2.1 -> 1.5.0
* Chucker 3.3.0 -> 3.5.2
* ThreeTenABP 1.3.0 -> 1.4.0
* AndroidX TestCore 1.3.0 -> 1.4.0
* AndroidX Test 1.3.0 -> 1.4.0
* AndroidX Espresso 3.3.0 -> 3.4.0
* AndroidX Test ExtJunit 1.1.2 -> 1.1.3

=== Migration